# build-YGOServer

./: CMakeLists.txt  README.md  premake5.lua
build-ocgcore/: build.sh
build-ocgcore/android/jni/: Android.mk
build-ocgcore/linux/: lua.make  ocgcore.make
build-ocgcore/macosx/: lua.make  ocgcore.make
build-ocgcore/windows/: ocgcore.vcxproj
gframe/: CMakeLists.txt  bufferio.h  client_card.h  config.h  data_manager.cpp  data_manager.h  deck_manager.cpp  deck_manager.h  game.cpp  game.h  gframe.cpp  myfilesystem.h  netserver.cpp  netserver.h  network.h  ocgcore_proxy.cpp  ocgcore_proxy_init.cpp  premake5.lua  replay.cpp  replay.h  serverapi.h  single_duel.cpp  single_duel.h  tag_duel.cpp  tag_duel.h  ygopro.rc
gframe/lzma/: CMakeLists.txt  Types.h
gframe/spmemvfs/: CMakeLists.txt  premake5.lua
irrlicht/: Android.mk  CMakeLists.txt  premake5-only-zipreader.lua  premake5.lua
irrlicht/include/: IOSOperator.h  irrTypes.h
irrlicht/source/Irrlicht/: CGUIEditBox.cpp  CGUIListBox.cpp  CIrrDeviceLinux.cpp  CIrrDeviceWin32.cpp  CIrrDeviceWinCE.cpp  COSOperator.cpp  COSOperator.h  COpenGLDriver.cpp
irrlicht/source/Irrlicht/MacOSX/: AppDelegate.h  CIrrDeviceMacOSX.h  CIrrDeviceMacOSX.mm  OSXClipboard.h
libevent/: Android.mk  CMakeLists.txt  premake5.lua
libevent/android/event2/: event-config.h
libevent/linux/event2/: event-config.h
lua/: Android.mk  CMakeLists.txt  premake5.lua
lzma/: Android.mk
ocgcore/: Android.mk  CMakeLists.txt  interpreter.cpp  premake5.lua
sqlite3/: Android.mk  CMakeLists.txt
zlib/: Android.mk
