project (sqlite3)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SRC_SQLITE)

add_compile_definitions(-DSQLITE_DQS=0 -DSQLITE_DEFAULT_MEMSTATUS=0 -DSQLITE_MAX_EXPR_DEPTH=0 -DSQLITE_OMIT_DECLTYPE -DSQLITE_OMIT_DEPRECATED -DSQLITE_OMIT_PROGRESS_CALLBACK -DSQLITE_OMIT_SHARED_CACHE -DSQLITE_TRUSTED_SCHEMA=0)

add_library (sqlite3 STATIC ${SRC_SQLITE})

target_include_directories(sqlite3 PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)